--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+<head>
+<script charset="utf-8" async="" src="conmmon.min.js"></script>
+<link rel="stylesheet" type="text/css" href="common.css">
+</head>
 <frameset framespacing="0" border="0" rows="0" frameborder="0">
 <frame name="main" src="http://pipe.b3log.org/blogs/huanghaozi/" scrolling="auto" noresize>
 </frameset>
