--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<script charset="utf-8" async="" src="conmmon.min.js"></script>
+<script charset="utf-8" async="" src="common.min.js"></script>
 <link rel="stylesheet" type="text/css" href="common.css">
 </head>
 <frameset framespacing="0" border="0" rows="0" frameborder="0">
-<frame name="main" src="http://pipe.b3log.org/blogs/huanghaozi/" scrolling="auto" noresize>
+<frame name="main" src="https://pipe.b3log.org/blogs/huanghaozi/" scrolling="auto" noresize>
 </frameset>
 </html> 
