--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <frameset framespacing="0" border="0" rows="0" frameborder="0">
-<frame name="main" src="https://pipe.b3log.org/blogs/huanghaozi/" scrolling="auto" noresize>
+<frame name="main" src="http://pipe.b3log.org/blogs/huanghaozi/" scrolling="auto" noresize>
 <script>
 function dynamicLoadCss(url) {
         var head = document.getElementsByTagName('head')[0];
